2007-05-16  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.1 release.
	* download.html: Ditto.

2007-04-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* plugins.html: Fixed broken link to wiki.

2007-04-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.0 release.
	* download.html: Ditto.

2007-04-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.6.3 release.
	* download.html: Ditto.

2007-03-19  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Fixed "higlights" typo (Thanks Tommi).

2007-03-12  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.6.1 release.
	* download.html: Ditto.

2007-03-07  Tommi Asiala  <tommi@asiala.info>

	* default.css
	* download.html
	* features.html
	* getinvolved.html
	* images/applet-plugins.png
	* images/package-x-generic.png
	* images/Makefile.am
	* index.html
	* Makefile.am
	* plugins.html
		
	New layout, division to multiple pages and new content including
	a page about plugins.

2007-03-05  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.6.0 release.

2007-02-28  Boyd Timothy  <btimothy@gmail.com>

	* images/applet-small.png: Updated to show the newer pin icons.

2007-02-26  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.9 release.

2007-02-12  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.8 release.

2007-02-12  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.7 release.

2007-02-05  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.6 release.

2007-01-29  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Include NEWS and ChangeLog back into the development
	release list (it somehow got omitted).

2007-01-29  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Updated for 0.5.5 release.

2007-01-23  Boyd Timothy  <btimothy@gmail.com>

	* index.html: Mention the #tomboy IRC channel in the Discussion section.
	