@@ -55,25 +55,19 @@
     <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.1.tar.gz"
-      title="Source code of the latest stable release">
+      title="Source code of the 0.6.1 stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.6.1</a></div>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.0.tar.gz"
-      title="Source code of the latest stable release">
+      title="Source code of the 0.6.0 stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.6.0</a></div>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.4/tomboy-0.4.1.tar.gz"
-      title="Source code of the latest stable release">
+      title="Source code of the 0.4.1 stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.4.1</a></div>
-      <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.4/tomboy-0.4.0.tar.gz"
-      title="Source code of the latest stable release">
-      <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.4.0</a></div>
-
     </div>
     
     <div id="right">
@@ -86,25 +80,25 @@
       
     <h3>Latest release</h3>
       <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.1.tar.gz"
-      title="Source code of the latest stable release">
+      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.2.tar.gz"
+      title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.7.1</a></div>
+      Tomboy 0.7.2</a></div>
 
       <!--<p>There is currently no separate development release.</p>-->
       
     <h3>Past releases</h3>
       <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.0.tar.gz"
-      title="Source code of the latest stable release">
+      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.1.tar.gz"
+      title="Source code of the 0.7.1 unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.7.0</a></div>
+      Tomboy 0.7.1</a></div>
 
       <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.5/tomboy-0.5.9.tar.gz"
-      title="Source code of the latest stable release">
+      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.0.tar.gz"
+      title="Source code of the 0.7.0 unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.5.9</a></div>
+      Tomboy 0.7.0</a></div>
     </div>
   </body>
 </html>
