@@ -71,6 +71,15 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>July 12th 2007</h3>
+   	      <b>Unstable</b> version 0.7.2 released!  New in this release:
+   	      <ul>
+   	        <li>Tasks addin (experimental)</li>
+   	        <li>Tomboy plugin infrastructure migrated to <a href="http://www.mono-project.com/Mono.Addins">Mono.Addins</a></li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_2/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>May 14th 2007</h3>
    	      <b>Unstable</b> version 0.7.1 released!  New in this release:
    	      <ul>
